boton precio en facturas

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -375,7 +375,7 @@ FONT 8, "MS Sans Serif"
 {
   CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 246, 30, 113, 11
   CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 246, 42, 199, 11
-  CONTROL "", 172, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 385, 28, 47, 183
+  CONTROL "", 172, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 391, 28, 43, 183
   CONTROL "", 101, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 246, 54, 113, 11
   CONTROL "", 102, "Edit", WS_BORDER|WS_TABSTOP, 246, 66, 199, 11
   CONTROL "", 107, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 246, 78, 73, 11
@@ -497,7 +497,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 151, "Edit", NOT WS_VISIBLE|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 103, 103, 94, 11
   CONTROL "", 152, "Edit", NOT WS_VISIBLE|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 103, 103, 94, 11
   CONTROL "&S", 513, "Button", WS_TABSTOP, 91, 102, 12, 11
-  CONTROL "", 174, "TBtnBmp", 0x00000000, 433, 28, 12, 13
+  CONTROL "", 174, "TBtnBmp", 0x00000000, 435, 28, 10, 13
 }
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
@@ -6526,7 +6526,7 @@ FONT 8, "MS Sans Serif"
 {
   CONTROL "Descuentos", 700, "Button", BS_GROUPBOX, 44, 274, 152, 75
   CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 254, 30, 104, 11
-  CONTROL "", 171, "ComboBox", WS_BORDER|CBS_DROPDOWN|CBS_NOINTEGRALHEIGHT|WS_TABSTOP, 399, 28, 65, 103
+  CONTROL "", 171, "ComboBox", WS_BORDER|CBS_DROPDOWN|CBS_NOINTEGRALHEIGHT|WS_TABSTOP, 399, 28, 54, 103
   CONTROL "", 180, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 254, 42, 210, 11
   CONTROL "", 181, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 254, 54, 104, 11
   CONTROL "", 182, "Edit", ES_RIGHT|WS_BORDER, 399, 54, 65, 11
@@ -6551,7 +6551,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 260, "Edit", WS_BORDER|WS_TABSTOP, 495, 102, 56, 11
   CONTROL "", 261, "Edit", WS_BORDER|WS_TABSTOP, 552, 102, 110, 11
   CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 495, 114, 56, 11
-  CONTROL "", 191, "TBitmap", 0x00800000, 552, 114, 16, 11
+  CONTROL "", 191, "TBitMap", 0x00800000, 552, 114, 16, 11
   CONTROL "", 192, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 570, 114, 92, 11
   CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 44, 128, 50, 14
   CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 98, 128, 50, 14
@@ -6648,6 +6648,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 423, "Edit", WS_BORDER|WS_TABSTOP, 602, 66, 60, 11
   CONTROL "", 424, "Edit", WS_BORDER|WS_TABSTOP, 495, 66, 18, 11
   CONTROL "", 425, "Edit", WS_BORDER|WS_TABSTOP, 514, 66, 18, 11
+  CONTROL "", 174, "TBtnBmp", 0x00000000, 454, 28, 10, 13
 }
 
 FACCLI_2 DIALOG DISCARDABLE 26, -29, 670, 375
