boton precios en rectificativas

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -6929,7 +6929,7 @@ FONT 8, "MS Sans Serif"
 {
   CONTROL "Descuentos", 700, "Button", BS_GROUPBOX, 44, 288, 149, 64
   CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 223, 30, 124, 11
-  CONTROL "", 171, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 385, 28, 59, 100
+  CONTROL "", 171, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 385, 28, 47, 100
   CONTROL "", 180, "Edit", WS_BORDER|WS_TABSTOP, 223, 42, 220, 11
   CONTROL "", 181, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 223, 54, 124, 11
   CONTROL "", 182, "Edit", ES_RIGHT|WS_BORDER, 385, 54, 58, 11
@@ -7035,6 +7035,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Factura rectificativa", -1, "Static", WS_GROUP, 44, 3, 120, 8
   CONTROL "Punto verde", 409, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 486, 327, 52, 10
   CONTROL "", 192, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 561, 115, 102, 11
+  CONTROL "", 174, "TBtnBmp", 0x00000000, 433, 28, 10, 13
 }
 
 FACREC_02 DIALOG DISCARDABLE 26, -29, 670, 375
