boton precio en pedidos

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -15247,7 +15247,7 @@ FONT 8, "MS Sans Serif"
 {
   CONTROL "Descuentos", 700, "Button", BS_GROUPBOX, 44, 287, 152, 61
   CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 231, 30, 110, 11
-  CONTROL "", 132, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 381, 28, 60, 185
+  CONTROL "", 132, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 381, 28, 49, 185
   CONTROL "", 131, "Edit", WS_BORDER|WS_TABSTOP, 231, 42, 210, 11
   CONTROL "", 101, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 231, 54, 110, 11
   CONTROL "", 133, "Edit", ES_RIGHT|WS_BORDER, 381, 54, 60, 11
@@ -15360,6 +15360,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 424, "Edit", WS_BORDER|WS_TABSTOP, 474, 66, 18, 11
   CONTROL "", 425, "Edit", WS_BORDER|WS_TABSTOP, 493, 66, 18, 11
   CONTROL "Situación", -1, "Static", WS_GROUP, 45, 117, 51, 8
+  CONTROL "", 174, "TBtnBmp", 0x00000000, 431, 28, 10, 13
 }
 
 PEDCLI_2 DIALOG DISCARDABLE 45, 10, 670, 375
