--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -440,7 +440,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 111, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 103, 67, 94, 11
   CONTROL "", 113, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 103, 79, 94, 11
   CONTROL "", 140, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 103, 91, 94, 11
-  CONTROL "&P", 512, "Button", WS_TABSTOP, 79, 102, 12, 11
+  CONTROL "&G", 512, "Button", WS_TABSTOP, 91, 102, 12, 11
   CONTROL "", 150, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 103, 103, 94, 11
   CONTROL "Imp. incluido", 165, "Button", BS_AUTOCHECKBOX, 44, 116, 53, 10
   CONTROL "", 160, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 103, 115, 94, 11
@@ -492,11 +492,8 @@ FONT 8, "MS Sans Serif"
   CONTROL "Banco", -1, "Static", WS_GROUP, 447, 57, 29, 8
   CONTROL "Cuenta", -1, "Static", WS_GROUP, 447, 69, 29, 8
   CONTROL "", 601, "TBtnBmp", 0x00000000, 44, 102, 12, 11
-  CONTROL "", 602, "TBtnBmp", 0x00000000, 56, 102, 12, 11
-  CONTROL "", 603, "TBtnBmp", 0x00000000, 68, 102, 12, 11
+  CONTROL "", 603, "TBtnBmp", 0x00000000, 57, 102, 12, 11
   CONTROL "", 151, "Edit", NOT WS_VISIBLE|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 103, 103, 94, 11
-  CONTROL "", 152, "Edit", NOT WS_VISIBLE|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 103, 103, 94, 11
-  CONTROL "&S", 513, "Button", WS_TABSTOP, 91, 102, 12, 11
   CONTROL "", 174, "TBtnBmp", 0x00000000, 433, 28, 12, 13
 }
 
@@ -12478,9 +12475,9 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 400, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 218, 213, 50, 11
   CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 270, 213, 18, 11
   CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 218, 226, 70, 11
-  CONTROL "", 310, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 218, 239, 70, 11
+  CONTROL "", 310, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 392, 258, 70, 11
   CONTROL "", 320, "Edit", ES_RIGHT|WS_BORDER, 218, 258, 70, 11
-  CONTROL "Gastos suplidos", 440, "Button", NOT WS_VISIBLE|BS_AUTOCHECKBOX|WS_TABSTOP, 304, 109, 63, 10
+  CONTROL "Gastos suplidos", 440, "Button", NOT WS_VISIBLE|BS_AUTOCHECKBOX|WS_TABSTOP, 305, 109, 63, 10
   CONTROL "", 295, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 402, 200, 60, 11
   CONTROL "", 460, "Edit", ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 341, 213, 121, 11
   CONTROL "", 301, "Edit", WS_BORDER|WS_TABSTOP, 290, 226, 172, 11
@@ -12512,13 +12509,16 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 541, "Static", WS_GROUP, 4, 190, 47, 8
   CONTROL "", 531, "Static", WS_GROUP, 4, 177, 42, 8
   CONTROL "Unidad medición", -1, "Static", WS_GROUP, 136, 164, 58, 8
-  CONTROL "Importe comisión ", -1, "Static", WS_GROUP, 304, 151, 60, 8
+  CONTROL "Importe comisión ", -1, "Static", WS_GROUP, 305, 151, 60, 8
   CONTROL "Caducidad", 341, "Static", NOT WS_VISIBLE|WS_GROUP, 4, 32, 41, 8
-  CONTROL "Factor", -1, "Static", WS_GROUP, 304, 203, 35, 8
+  CONTROL "Factor", -1, "Static", WS_GROUP, 305, 203, 35, 8
   CONTROL "Bultos", 451, "Static", WS_GROUP, 4, 124, 48, 8
-  CONTROL "Formato", -1, "Static", WS_GROUP, 304, 215, 35, 8
-  CONTROL "Stock", -1, "Static", WS_GROUP, 136, 242, 45, 8
+  CONTROL "Formato", -1, "Static", WS_GROUP, 305, 215, 32, 8
+  CONTROL "Stock", -1, "Static", WS_GROUP, 305, 261, 45, 8
   CONTROL "Contador", 257, "Static", NOT WS_VISIBLE|WS_GROUP, 4, 98, 36, 8
+  CONTROL "", 330, "Edit", WS_BORDER|WS_TABSTOP, 218, 239, 70, 11
+  CONTROL "", 331, "Edit", WS_BORDER|WS_TABSTOP, 290, 239, 172, 11
+  CONTROL "Dirección", -1, "Static", WS_GROUP, 136, 242, 45, 8
 }
 
 LFACCLI_2 DIALOG DISCARDABLE 150, 93, 359, 220
@@ -12775,32 +12775,29 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 161, "Edit", WS_BORDER, 161, 81, 194, 11
   CONTROL "", 320, "Edit", WS_BORDER|WS_TABSTOP, 100, 94, 60, 11
   CONTROL "", 321, "Edit", WS_BORDER, 161, 94, 194, 11
-  CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 100, 107, 60, 11
-  CONTROL "", 191, "Edit", WS_BORDER, 161, 107, 194, 11
-  CONTROL "", 370, "Edit", WS_BORDER|WS_TABSTOP, 100, 119, 60, 11
-  CONTROL "", 371, "Edit", WS_BORDER, 162, 119, 194, 11
-  CONTROL "", 300, "Edit", ES_RIGHT|WS_BORDER, 100, 132, 100, 11
-  CONTROL "Utilizar el volumen en el cálculo de impuestos especiales", 411, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 5, 144, 192, 10
-  CONTROL "Linea de artículo compuesto", 331, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 249, 144, 106, 10
-  CONTROL "Linea de artículo componente", 330, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 5, 154, 107, 10
-  CONTROL "Precio en escandallo", 340, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 249, 154, 79, 10
-  CONTROL "Control de stocks", 350, "Button", BS_AUTORADIOBUTTON, 5, 177, 68, 10
-  CONTROL "Contadores", 351, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 5, 190, 49, 10
-  CONTROL "No controlar stock", 352, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 5, 202, 71, 10
-  CONTROL "", 360, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 213, 60, 11
-  CONTROL "", 361, "Edit", ES_MULTILINE|WS_BORDER, 164, 213, 40, 11
+  CONTROL "", 370, "Edit", WS_BORDER|WS_TABSTOP, 100, 107, 60, 11
+  CONTROL "", 371, "Edit", WS_BORDER, 162, 107, 194, 11
+  CONTROL "", 300, "Edit", ES_RIGHT|WS_BORDER, 100, 120, 100, 11
+  CONTROL "Utilizar el volumen en el cálculo de impuestos especiales", 411, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 5, 132, 192, 10
+  CONTROL "Linea de artículo compuesto", 331, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 249, 132, 106, 10
+  CONTROL "Linea de artículo componente", 330, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 5, 142, 107, 10
+  CONTROL "Precio en escandallo", 340, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 249, 142, 79, 10
+  CONTROL "Control de stocks", 350, "Button", BS_AUTORADIOBUTTON, 5, 165, 68, 10
+  CONTROL "Contadores", 351, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 5, 178, 49, 10
+  CONTROL "No controlar stock", 352, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 5, 190, 71, 10
+  CONTROL "", 360, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 201, 60, 11
+  CONTROL "", 361, "Edit", ES_MULTILINE|WS_BORDER, 164, 201, 40, 11
   CONTROL "Nº Línea", -1, "Static", WS_GROUP, 5, 4, 30, 8
   CONTROL "Precio vta. recomendado", -1, "Static", WS_GROUP, 5, 46, 80, 8
   CONTROL "Fecha de entrega", -1, "Static", WS_GROUP, 5, 25, 66, 8
   CONTROL "Imágen ", -1, "Static", WS_GROUP, 5, 59, 73, 8
   CONTROL "Grupo de familia", -1, "Static", WS_GROUP, 5, 72, 55, 8
   CONTROL "Familia", -1, "Static", WS_GROUP, 5, 84, 55, 8
-  CONTROL "Margen", 301, "Static", WS_GROUP, 5, 134, 24, 8
+  CONTROL "Margen", 301, "Static", WS_GROUP, 5, 122, 24, 8
   CONTROL "Proveedor", -1, "Static", WS_GROUP, 5, 97, 69, 8
-  CONTROL "Fecha valor stock", -1, "Static", WS_GROUP, 5, 216, 66, 8
-  CONTROL "Stock", 4001, "Button", BS_GROUPBOX|WS_TABSTOP, 2, 166, 354, 64
-  CONTROL "Centro de coste", -1, "Static", WS_GROUP, 5, 122, 69, 8
-  CONTROL "Dirección", -1, "Static", WS_GROUP, 5, 110, 69, 8
+  CONTROL "Fecha valor stock", -1, "Static", WS_GROUP, 5, 204, 66, 8
+  CONTROL "Stock", 4001, "Button", BS_GROUPBOX|WS_TABSTOP, 2, 154, 354, 64
+  CONTROL "Centro de coste", -1, "Static", WS_GROUP, 5, 110, 69, 8
 }
 
 LFACCLI_7 DIALOG DISCARDABLE 16, 4, 359, 221
@@ -14719,7 +14716,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", -1, "Button", BS_GROUPBOX, 2, 0, 177, 85
 }
 
-OBRAS DIALOG DISCARDABLE 51, -26, 289, 227
+OBRAS DIALOG DISCARDABLE 51, -26, 289, 235
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
@@ -14733,13 +14730,14 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 200, 76, 80, 12
   CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 77, 89, 80, 12
   CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 77, 102, 80, 12
-  CONTROL "Dirección por defecto", 220, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 117, 81, 10
-  CONTROL "", 200, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 77, 142, 203, 12
-  CONTROL "", 210, "Edit", WS_BORDER|WS_TABSTOP, 77, 155, 80, 12
-  CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 77, 181, 80, 12
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 125, 204, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 180, 204, 50, 14
-  CONTROL "A&yuda", 559, "Button", WS_TABSTOP, 235, 204, 50, 14
+  CONTROL "", 250, "Edit", WS_BORDER|WS_TABSTOP, 77, 115, 80, 12
+  CONTROL "Dirección por defecto", 220, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 130, 81, 10
+  CONTROL "", 200, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 77, 157, 203, 12
+  CONTROL "", 210, "Edit", WS_BORDER|WS_TABSTOP, 77, 170, 80, 12
+  CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 77, 196, 80, 12
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 125, 217, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 180, 217, 50, 14
+  CONTROL "A&yuda", 559, "Button", WS_TABSTOP, 235, 217, 50, 14
   CONTROL "Código", -1, "Static", WS_GROUP, 8, 14, 52, 8
   CONTROL "Nombre", -1, "Static", WS_GROUP, 8, 27, 52, 8
   CONTROL "Domicilio", -1, "Static", WS_GROUP, 8, 40, 52, 8
@@ -14747,14 +14745,15 @@ FONT 8, "MS Sans Serif"
   CONTROL "CP / Provincia", -1, "Static", WS_GROUP, 8, 66, 52, 8
   CONTROL "Télefono", -1, "Static", WS_GROUP, 8, 79, 52, 8
   CONTROL "Fax", -1, "Static", WS_GROUP, 161, 79, 26, 8
-  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 3, 2, 282, 128
-  CONTROL "Contacto", -1, "Button", BS_GROUPBOX, 3, 132, 282, 38
-  CONTROL "Persona de contacto", -1, "Static", WS_GROUP, 8, 145, 66, 8
-  CONTROL "Télefono", -1, "Static", WS_GROUP, 8, 158, 52, 8
+  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 3, 2, 282, 143
+  CONTROL "Contacto", -1, "Button", BS_GROUPBOX, 3, 147, 282, 38
+  CONTROL "Persona de contacto", -1, "Static", WS_GROUP, 8, 160, 66, 8
+  CONTROL "Télefono", -1, "Static", WS_GROUP, 8, 173, 52, 8
   CONTROL "EDI [EAN]", -1, "Static", WS_GROUP, 8, 105, 38, 8
   CONTROL "Establecimiento", -1, "Static", WS_GROUP, 8, 92, 52, 8
-  CONTROL "", -1, "Button", BS_GROUPBOX, 3, 173, 282, 24
-  CONTROL "Nº operacional", -1, "Static", WS_GROUP, 8, 184, 52, 8
+  CONTROL "", -1, "Button", BS_GROUPBOX, 3, 188, 282, 24
+  CONTROL "Nº operacional", -1, "Static", WS_GROUP, 8, 199, 52, 8
+  CONTROL "Departamento", -1, "Static", WS_GROUP, 8, 118, 49, 8
 }
 
 OFERTA DIALOG DISCARDABLE 94, -202, 351, 320
@@ -20622,13 +20621,15 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 101, 39, 270, 11
   CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 101, 51, 270, 11
   CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 101, 63, 270, 11
-  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 101, 75, 103, 11
+  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 101, 75, 114, 11
   CONTROL "Publicar en web", 400, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 305, 77, 66, 11
+  CONTROL "", 146, "Edit", WS_BORDER|WS_TABSTOP, 101, 98, 114, 11
+  CONTROL "", 147, "Edit", WS_BORDER|WS_TABSTOP, 277, 98, 94, 11
   CONTROL "General", 240, "Button", BS_AUTORADIOBUTTON, 50, 127, 60, 10
-  CONTROL "Recargo equivalencia", 130, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 175, 81, 10
   CONTROL "Unión Europea", 241, "Button", BS_AUTORADIOBUTTON, 50, 139, 60, 10
   CONTROL "Exento", 242, "Button", BS_AUTORADIOBUTTON, 50, 151, 60, 10
   CONTROL "Exportación", 243, "Button", BS_AUTORADIOBUTTON, 50, 163, 60, 10
+  CONTROL "Recargo equivalencia", 130, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 175, 81, 10
   CONTROL "", 310, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 101, 187, 93, 40
   CONTROL "", 320, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 101, 202, 38, 11
   CONTROL "", 159, "Edit", WS_BORDER|WS_TABSTOP, 204, 126, 124, 11
@@ -20642,69 +20643,68 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 205, "Edit", WS_BORDER|WS_TABSTOP, 204, 187, 124, 11
   CONTROL "", 200, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 329, 187, 40, 11
   CONTROL "", 300, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 283, 200, 86, 11
-  CONTROL "Autorizado para venta de crédito", 140, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 230, 124, 10
-  CONTROL "Bloquear con riesgo alcanzado", 145, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 242, 124, 10
-  CONTROL "", 250, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 283, 228, 86, 11
-  CONTROL "", 251, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 283, 240, 86, 11
+  CONTROL "Autorizado para venta de crédito", 140, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 235, 124, 10
+  CONTROL "Bloquear con riesgo alcanzado", 145, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 247, 124, 10
+  CONTROL "", 250, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 283, 233, 86, 11
+  CONTROL "", 251, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 283, 245, 86, 11
   CONTROL "Lun.", 230, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 390, 40, 27, 11
   CONTROL "", 330, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 421, 39, 30, 11
   CONTROL "", 430, "Edit", WS_BORDER|WS_TABSTOP, 453, 39, 34, 11
-  CONTROL "Mar.", 231, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 390, 53, 27, 11
-  CONTROL "", 331, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 421, 52, 30, 11
-  CONTROL "", 431, "Edit", WS_BORDER|WS_TABSTOP, 453, 52, 34, 11
-  CONTROL "Mie.", 232, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 390, 66, 27, 11
-  CONTROL "", 332, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 421, 65, 30, 11
-  CONTROL "", 432, "Edit", WS_BORDER|WS_TABSTOP, 453, 65, 34, 11
-  CONTROL "Jue.", 233, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 390, 79, 27, 11
-  CONTROL "", 333, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 421, 78, 30, 11
-  CONTROL "", 433, "Edit", WS_BORDER|WS_TABSTOP, 453, 78, 34, 11
-  CONTROL "Vie.", 234, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 390, 92, 25, 11
-  CONTROL "", 334, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 421, 91, 30, 11
-  CONTROL "", 434, "Edit", WS_BORDER|WS_TABSTOP, 453, 91, 34, 11
-  CONTROL "Sáb.", 235, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 390, 105, 28, 11
-  CONTROL "", 335, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 421, 104, 30, 11
-  CONTROL "", 435, "Edit", WS_BORDER|WS_TABSTOP, 453, 104, 34, 11
-  CONTROL "Dom.", 236, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 390, 118, 30, 11
-  CONTROL "", 336, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 421, 117, 30, 11
-  CONTROL "", 436, "Edit", WS_BORDER|WS_TABSTOP, 453, 117, 34, 11
-  CONTROL "Excluir de fidelización", 158, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 391, 182, 81, 11
-  CONTROL "", 210, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 390, 148, 96, 11
-  CONTROL "Bloquear cliente", 155, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 391, 196, 64, 11
-  CONTROL "", 156, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 428, 213, 60, 11
-  CONTROL "", 157, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 391, 240, 96, 11
+  CONTROL "Mar.", 231, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 390, 52, 27, 11
+  CONTROL "", 331, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 421, 51, 30, 11
+  CONTROL "", 431, "Edit", WS_BORDER|WS_TABSTOP, 453, 51, 34, 11
+  CONTROL "Mie.", 232, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 390, 64, 27, 11
+  CONTROL "", 332, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 421, 63, 30, 11
+  CONTROL "", 432, "Edit", WS_BORDER|WS_TABSTOP, 453, 63, 34, 11
+  CONTROL "Jue.", 233, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 390, 76, 27, 11
+  CONTROL "", 333, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 421, 75, 30, 11
+  CONTROL "", 433, "Edit", WS_BORDER|WS_TABSTOP, 453, 75, 34, 11
+  CONTROL "Vie.", 234, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 390, 88, 25, 11
+  CONTROL "", 334, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 421, 87, 30, 11
+  CONTROL "", 434, "Edit", WS_BORDER|WS_TABSTOP, 453, 87, 34, 11
+  CONTROL "Sáb.", 235, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 390, 100, 28, 11
+  CONTROL "", 335, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 421, 99, 30, 11
+  CONTROL "", 435, "Edit", WS_BORDER|WS_TABSTOP, 453, 99, 34, 11
+  CONTROL "Dom.", 236, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 390, 112, 30, 11
+  CONTROL "", 336, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 421, 111, 30, 11
+  CONTROL "", 436, "Edit", WS_BORDER|WS_TABSTOP, 453, 111, 34, 11
+  CONTROL "Excluir de fidelización", 158, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 391, 205, 81, 11
+  CONTROL "", 210, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 390, 141, 96, 11
+  CONTROL "Bloquear cliente", 155, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 391, 217, 64, 11
+  CONTROL "", 156, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 428, 232, 60, 11
+  CONTROL "", 157, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 391, 245, 96, 11
   CONTROL "Nombre ", -1, "Static", WS_GROUP, 50, 41, 26, 8
   CONTROL "Domicilio", -1, "Static", WS_GROUP, 50, 54, 31, 8
   CONTROL "Web", -1, "Static", WS_GROUP, 50, 66, 21, 8
-  CONTROL "Riesgo ", -1, "Static", WS_GROUP, 206, 231, 29, 11
-  CONTROL "Alcanzado", -1, "Static", WS_GROUP, 206, 243, 39, 11
+  CONTROL "Riesgo ", -1, "Static", WS_GROUP, 206, 236, 29, 11
+  CONTROL "Alcanzado", -1, "Static", WS_GROUP, 206, 248, 39, 11
   CONTROL "%", -1, "Static", WS_GROUP, 370, 153, 8, 8
   CONTROL "%", -1, "Static", WS_GROUP, 370, 165, 8, 8
   CONTROL "%", -1, "Static", WS_GROUP, 370, 189, 8, 8
   CONTROL "%", -1, "Static", WS_GROUP, 370, 128, 8, 8
-  CONTROL "Mes de vacaciones", -1, "Static", WS_GROUP, 390, 137, 73, 10
+  CONTROL "Mes de vacaciones", -1, "Static", WS_GROUP, 390, 127, 73, 10
   CONTROL "Establecimiento", -1, "Button", BS_GROUPBOX, 44, 29, 338, 61
   CONTROL "Régimen de impuestos", -1, "Button", BS_GROUPBOX, 43, 115, 155, 101
-  CONTROL "Bloqueo", -1, "Button", BS_GROUPBOX, 384, 171, 108, 85
+  CONTROL "Bloqueo", -1, "Button", BS_GROUPBOX, 384, 193, 108, 67
   CONTROL "Descuentos", 98, "Button", BS_GROUPBOX, 199, 115, 182, 61
-  CONTROL "Días de visita", -1, "Button", BS_GROUPBOX, 384, 29, 108, 139
+  CONTROL "Días de visita", -1, "Button", BS_GROUPBOX, 384, 29, 108, 129
   CONTROL "%", -1, "Static", WS_GROUP, 370, 140, 8, 8
   CONTROL "Aplicado en", -1, "Static", WS_GROUP, 206, 204, 47, 10
   CONTROL "Porcentaje I.R.P.F.", -1, "Static", WS_GROUP, 50, 205, 36, 8
   CONTROL "%", -1, "Static", WS_GROUP, 142, 205, 9, 8
   CONTROL "Tipo I.R.P.F.", -1, "Static", WS_GROUP, 50, 190, 45, 8
   CONTROL "Descuentos atipicos", -1, "Button", BS_GROUPBOX, 199, 177, 182, 39
-  CONTROL "Crédito", -1, "Button", BS_GROUPBOX, 43, 219, 338, 37
-  CONTROL "Fecha", -1, "Static", WS_GROUP, 391, 213, 25, 10
-  CONTROL "Motivo", -1, "Static", WS_GROUP, 391, 229, 24, 10
+  CONTROL "Crédito", -1, "Button", BS_GROUPBOX, 43, 219, 338, 41
+  CONTROL "Fecha", -1, "Static", WS_GROUP, 391, 232, 25, 10
   CONTROL "Contraseña", -1, "Static", WS_GROUP, 50, 78, 37, 8
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Datos realcionados con la actividad comercial del cliente ", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 446, 8
-  CONTROL "", 600, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 115, 98, 60, 11
-  CONTROL "", 601, "Edit", WS_BORDER|WS_TABSTOP, 176, 98, 28, 11
-  CONTROL "Ult. llamada", -1, "Static", WS_GROUP, 51, 101, 48, 8
-  CONTROL "", 602, "TBtnBmp", 0x00000000, 102, 98, 12, 11
+  CONTROL "", 600, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 403, 175, 56, 11
+  CONTROL "", 601, "Edit", WS_BORDER|WS_TABSTOP, 460, 175, 26, 11
+  CONTROL "", 602, "TBtnBmp", 0x00000000, 390, 175, 12, 11
   CONTROL "", -1, "Button", BS_GROUPBOX, 43, 90, 338, 23
-  CONTROL "", 146, "Edit", WS_BORDER|WS_TABSTOP, 257, 98, 114, 11
-  CONTROL "EDI [EAN]", 4002, "Static", WS_GROUP, 208, 100, 38, 8
+  CONTROL "EDI [EAN]", -1, "Static", WS_GROUP, 50, 101, 38, 8
+  CONTROL "Última llamada", -1, "Button", BS_GROUPBOX, 384, 161, 108, 30
+  CONTROL "Departamento", 4002, "Static", WS_GROUP, 225, 101, 50, 8
 }
 
