correccion en script y icono find_64.bmp

--- a/resource/Gstimage12.rc
+++ b/resource/Gstimage12.rc
@@ -132,3 +132,4 @@ arrow_down_blue_16 BITMAP "..\\bmp\\arrow_down_blue_16.bmp"
 graphics-tablet_16 BITMAP "..\\bmp\\graphics-tablet_16.bmp"
 user1_64 BITMAP "..\\bmp\\user1_64.bmp"
 document_plain_user1_64 BITMAP "..\\bmp\\document_plain_user1_64.bmp"
+find_64 BITMAP "..\\bmp\\find_64.bmp"
