--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -14723,44 +14723,53 @@ FONT 8, "MS Sans Serif"
   CONTROL "", -1, "Button", BS_GROUPBOX, 2, 0, 177, 85
 }
 
-OBRAS DIALOG DISCARDABLE 51, -26, 289, 235
+OBRAS DIALOG DISCARDABLE 51, -26, 326, 288
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 120, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 77, 11, 50, 12
-  CONTROL "", 130, "Edit", ES_AUTOHSCROLL|WS_HSCROLL|WS_BORDER|WS_TABSTOP, 77, 24, 203, 12
-  CONTROL "", 140, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 77, 37, 203, 12
-  CONTROL "", 150, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 77, 50, 203, 12
-  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 77, 63, 50, 12
-  CONTROL "", 160, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 129, 63, 151, 12
-  CONTROL "", 180, "Edit", WS_BORDER|WS_TABSTOP, 77, 76, 80, 12
-  CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 200, 76, 80, 12
-  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 77, 89, 80, 12
-  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 77, 102, 80, 12
-  CONTROL "", 250, "Edit", WS_BORDER|WS_TABSTOP, 77, 115, 80, 12
-  CONTROL "Dirección por defecto", 220, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 130, 81, 10
-  CONTROL "", 200, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 77, 157, 203, 12
-  CONTROL "", 210, "Edit", WS_BORDER|WS_TABSTOP, 77, 170, 80, 12
-  CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 77, 196, 80, 12
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 125, 217, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 180, 217, 50, 14
-  CONTROL "A&yuda", 559, "Button", WS_TABSTOP, 235, 217, 50, 14
+  CONTROL "", 130, "Edit", ES_AUTOHSCROLL|WS_HSCROLL|WS_BORDER|WS_TABSTOP, 77, 24, 243, 12
+  CONTROL "", 140, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 77, 49, 243, 12
+  CONTROL "", 150, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 77, 62, 243, 12
+  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 77, 75, 50, 12
+  CONTROL "", 160, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 129, 75, 191, 12
+  CONTROL "", 180, "Edit", WS_BORDER|WS_TABSTOP, 77, 88, 80, 12
+  CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 240, 88, 80, 12
+  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 77, 101, 80, 12
+  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 77, 114, 80, 12
+  CONTROL "", 250, "Edit", WS_BORDER|WS_TABSTOP, 240, 114, 80, 12
+  CONTROL "Dirección por defecto", 220, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 129, 81, 10
+  CONTROL "", 200, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 77, 213, 243, 12
+  CONTROL "", 210, "Edit", WS_BORDER|WS_TABSTOP, 77, 226, 80, 12
+  CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 77, 250, 80, 12
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 215, 271, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 270, 271, 50, 14
   CONTROL "Código", -1, "Static", WS_GROUP, 8, 14, 52, 8
   CONTROL "Nombre", -1, "Static", WS_GROUP, 8, 27, 52, 8
-  CONTROL "Domicilio", -1, "Static", WS_GROUP, 8, 40, 52, 8
-  CONTROL "Población", -1, "Static", WS_GROUP, 8, 53, 52, 8
-  CONTROL "CP / Provincia", -1, "Static", WS_GROUP, 8, 66, 52, 8
-  CONTROL "Télefono", -1, "Static", WS_GROUP, 8, 79, 52, 8
-  CONTROL "Fax", -1, "Static", WS_GROUP, 161, 79, 26, 8
-  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 3, 2, 282, 143
-  CONTROL "Contacto", -1, "Button", BS_GROUPBOX, 3, 147, 282, 38
-  CONTROL "Persona de contacto", -1, "Static", WS_GROUP, 8, 160, 66, 8
-  CONTROL "Télefono", -1, "Static", WS_GROUP, 8, 173, 52, 8
-  CONTROL "EDI [EAN]", -1, "Static", WS_GROUP, 8, 105, 38, 8
-  CONTROL "Establecimiento", -1, "Static", WS_GROUP, 8, 92, 52, 8
-  CONTROL "", -1, "Button", BS_GROUPBOX, 3, 188, 282, 24
-  CONTROL "Nº operacional", -1, "Static", WS_GROUP, 8, 199, 52, 8
-  CONTROL "Departamento", -1, "Static", WS_GROUP, 8, 118, 49, 8
+  CONTROL "Domicilio", -1, "Static", WS_GROUP, 8, 52, 52, 8
+  CONTROL "Población", -1, "Static", WS_GROUP, 8, 65, 52, 8
+  CONTROL "CP / Provincia", -1, "Static", WS_GROUP, 8, 78, 52, 8
+  CONTROL "Télefono", -1, "Static", WS_GROUP, 8, 91, 52, 8
+  CONTROL "Fax", -1, "Static", WS_GROUP, 161, 91, 26, 8
+  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 3, 2, 320, 143
+  CONTROL "Contacto", -1, "Button", BS_GROUPBOX, 3, 203, 320, 38
+  CONTROL "Persona de contacto", -1, "Static", WS_GROUP, 8, 216, 66, 8
+  CONTROL "Télefono", -1, "Static", WS_GROUP, 8, 229, 52, 8
+  CONTROL "EDI [EAN]", -1, "Static", WS_GROUP, 8, 117, 38, 8
+  CONTROL "Establecimiento", -1, "Static", WS_GROUP, 8, 104, 52, 8
+  CONTROL "", -1, "Button", BS_GROUPBOX, 3, 242, 320, 24
+  CONTROL "Nº operacional", -1, "Static", WS_GROUP, 8, 253, 52, 8
+  CONTROL "Departamento", -1, "Static", WS_GROUP, 161, 118, 49, 8
+  CONTROL "", 310, "Edit", WS_BORDER|WS_TABSTOP, 77, 37, 80, 12
+  CONTROL "N.I.F. / C.I.F.", -1, "Static", WS_GROUP, 8, 41, 42, 8
+  CONTROL "", 320, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 77, 157, 243, 11
+  CONTROL "", 330, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 77, 170, 243, 11
+  CONTROL "", 340, "Edit", WS_BORDER|WS_TABSTOP, 77, 183, 50, 11
+  CONTROL "Domicilio", -1, "Static", WS_GROUP, 8, 160, 32, 8
+  CONTROL "Población", -1, "Static", WS_GROUP, 8, 173, 33, 8
+  CONTROL "", 350, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 129, 183, 191, 11
+  CONTROL "Dirección de entrega", -1, "Button", BS_GROUPBOX, 3, 145, 320, 55
+  CONTROL "CP / Provincia", -1, "Static", WS_GROUP, 8, 186, 52, 8
 }
 
 OFERTA DIALOG DISCARDABLE 94, -202, 351, 320
@@ -20640,30 +20649,12 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 101, 63, 270, 11
   CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 101, 75, 114, 11
   CONTROL "Publicar en web", 400, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 305, 77, 66, 11
-  CONTROL "", 146, "Edit", WS_BORDER|WS_TABSTOP, 101, 98, 114, 11
-  CONTROL "", 147, "Edit", WS_BORDER|WS_TABSTOP, 277, 98, 94, 11
-  CONTROL "General", 240, "Button", BS_AUTORADIOBUTTON, 50, 127, 60, 10
-  CONTROL "Unión Europea", 241, "Button", BS_AUTORADIOBUTTON, 50, 139, 60, 10
-  CONTROL "Exento", 242, "Button", BS_AUTORADIOBUTTON, 50, 151, 60, 10
-  CONTROL "Exportación", 243, "Button", BS_AUTORADIOBUTTON, 50, 163, 60, 10
-  CONTROL "Recargo equivalencia", 130, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 175, 81, 10
-  CONTROL "", 310, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 101, 187, 93, 40
-  CONTROL "", 320, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 101, 202, 38, 11
-  CONTROL "", 159, "Edit", WS_BORDER|WS_TABSTOP, 204, 126, 124, 11
-  CONTROL "", 160, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 329, 126, 40, 11
-  CONTROL "", 169, "Edit", WS_BORDER|WS_TABSTOP, 204, 138, 124, 11
-  CONTROL "", 170, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 329, 138, 40, 11
-  CONTROL "", 175, "Edit", WS_BORDER|WS_TABSTOP, 204, 150, 124, 11
-  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 329, 150, 40, 11
-  CONTROL "", 185, "Edit", WS_BORDER|WS_TABSTOP, 204, 162, 124, 11
-  CONTROL "", 190, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 329, 162, 40, 11
-  CONTROL "", 205, "Edit", WS_BORDER|WS_TABSTOP, 204, 187, 124, 11
-  CONTROL "", 200, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 329, 187, 40, 11
-  CONTROL "", 300, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 283, 200, 86, 11
-  CONTROL "Autorizado para venta de crédito", 140, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 235, 124, 10
-  CONTROL "Bloquear con riesgo alcanzado", 145, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 247, 124, 10
-  CONTROL "", 250, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 283, 233, 86, 11
-  CONTROL "", 251, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 283, 245, 86, 11
+  CONTROL "", 146, "Edit", WS_BORDER|WS_TABSTOP, 101, 102, 114, 11
+  CONTROL "", 147, "Edit", WS_BORDER|WS_TABSTOP, 101, 115, 114, 11
+  CONTROL "Autorizado para venta de crédito", 140, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 206, 124, 10
+  CONTROL "Bloquear con riesgo alcanzado", 145, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 219, 124, 10
+  CONTROL "", 250, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 101, 232, 114, 11
+  CONTROL "", 251, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 101, 245, 114, 11
   CONTROL "Lun.", 230, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 390, 40, 27, 11
   CONTROL "", 330, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 421, 39, 30, 11
   CONTROL "", 430, "Edit", WS_BORDER|WS_TABSTOP, 453, 39, 34, 11
@@ -20687,31 +20678,19 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 436, "Edit", WS_BORDER|WS_TABSTOP, 453, 111, 34, 11
   CONTROL "Excluir de fidelización", 158, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 391, 205, 81, 11
   CONTROL "", 210, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 390, 141, 96, 11
-  CONTROL "Bloquear cliente", 155, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 391, 217, 64, 11
+  CONTROL "Bloquear cliente", 155, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 391, 218, 64, 11
   CONTROL "", 156, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 428, 232, 60, 11
   CONTROL "", 157, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 391, 245, 96, 11
   CONTROL "Nombre ", -1, "Static", WS_GROUP, 50, 41, 26, 8
   CONTROL "Domicilio", -1, "Static", WS_GROUP, 50, 54, 31, 8
   CONTROL "Web", -1, "Static", WS_GROUP, 50, 66, 21, 8
-  CONTROL "Riesgo ", -1, "Static", WS_GROUP, 206, 236, 29, 11
-  CONTROL "Alcanzado", -1, "Static", WS_GROUP, 206, 248, 39, 11
-  CONTROL "%", -1, "Static", WS_GROUP, 370, 153, 8, 8
-  CONTROL "%", -1, "Static", WS_GROUP, 370, 165, 8, 8
-  CONTROL "%", -1, "Static", WS_GROUP, 370, 189, 8, 8
-  CONTROL "%", -1, "Static", WS_GROUP, 370, 128, 8, 8
+  CONTROL "Riesgo ", -1, "Static", WS_GROUP, 50, 232, 29, 11
+  CONTROL "Alcanzado", -1, "Static", WS_GROUP, 50, 245, 39, 11
   CONTROL "Mes de vacaciones", -1, "Static", WS_GROUP, 390, 127, 73, 10
   CONTROL "Establecimiento", -1, "Button", BS_GROUPBOX, 44, 29, 338, 61
-  CONTROL "Régimen de impuestos", -1, "Button", BS_GROUPBOX, 43, 115, 155, 101
   CONTROL "Bloqueo", -1, "Button", BS_GROUPBOX, 384, 193, 108, 67
-  CONTROL "Descuentos", 98, "Button", BS_GROUPBOX, 199, 115, 182, 61
   CONTROL "Días de visita", -1, "Button", BS_GROUPBOX, 384, 29, 108, 129
-  CONTROL "%", -1, "Static", WS_GROUP, 370, 140, 8, 8
-  CONTROL "Aplicado en", -1, "Static", WS_GROUP, 206, 204, 47, 10
-  CONTROL "Porcentaje I.R.P.F.", -1, "Static", WS_GROUP, 50, 205, 36, 8
-  CONTROL "%", -1, "Static", WS_GROUP, 142, 205, 9, 8
-  CONTROL "Tipo I.R.P.F.", -1, "Static", WS_GROUP, 50, 190, 45, 8
-  CONTROL "Descuentos atipicos", -1, "Button", BS_GROUPBOX, 199, 177, 182, 39
-  CONTROL "Crédito", -1, "Button", BS_GROUPBOX, 43, 219, 338, 41
+  CONTROL "Crédito", -1, "Button", BS_GROUPBOX, 43, 193, 338, 67
   CONTROL "Fecha", -1, "Static", WS_GROUP, 391, 232, 25, 10
   CONTROL "Contraseña", -1, "Static", WS_GROUP, 50, 78, 37, 8
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
@@ -20719,9 +20698,55 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 600, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 403, 175, 56, 11
   CONTROL "", 601, "Edit", WS_BORDER|WS_TABSTOP, 460, 175, 26, 11
   CONTROL "", 602, "TBtnBmp", 0x00000000, 390, 175, 12, 11
-  CONTROL "", -1, "Button", BS_GROUPBOX, 43, 90, 338, 23
-  CONTROL "EDI [EAN]", -1, "Static", WS_GROUP, 50, 101, 38, 8
+  CONTROL "EDI [EAN]", -1, "Button", BS_GROUPBOX, 43, 90, 338, 41
+  CONTROL "Código", -1, "Static", WS_GROUP, 50, 105, 38, 8
   CONTROL "Última llamada", -1, "Button", BS_GROUPBOX, 384, 161, 108, 30
-  CONTROL "Departamento", 4002, "Static", WS_GROUP, 225, 101, 50, 8
+  CONTROL "Departamento", 4002, "Static", WS_GROUP, 50, 118, 50, 8
+  CONTROL "", 310, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 101, 149, 270, 11
+  CONTROL "", 320, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 101, 162, 270, 11
+  CONTROL "", 340, "Edit", WS_BORDER|WS_TABSTOP, 101, 175, 76, 11
+  CONTROL "Domicilio", -1, "Static", WS_GROUP, 50, 152, 32, 8
+  CONTROL "Población", -1, "Static", WS_GROUP, 50, 165, 33, 8
+  CONTROL "Dirección de entrega", -1, "Button", BS_GROUPBOX, 43, 135, 338, 57
+  CONTROL "", 350, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 180, 175, 191, 11
+  CONTROL "CP y Provincia", 4001, "Static", WS_GROUP, 50, 178, 51, 8
+}
+
+CLIENT_19 DIALOG DISCARDABLE -3, 20, 496, 263
+STYLE WS_CHILD|DS_3DLOOK
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "General", 240, "Button", BS_AUTORADIOBUTTON, 50, 41, 60, 10
+  CONTROL "Unión Europea", 241, "Button", BS_AUTORADIOBUTTON, 50, 53, 60, 10
+  CONTROL "Exento", 242, "Button", BS_AUTORADIOBUTTON, 50, 65, 60, 10
+  CONTROL "Exportación", 243, "Button", BS_AUTORADIOBUTTON, 50, 77, 60, 10
+  CONTROL "Recargo equivalencia", 130, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 89, 81, 10
+  CONTROL "", 310, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 101, 101, 93, 40
+  CONTROL "", 320, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 101, 116, 38, 11
+  CONTROL "", 159, "Edit", WS_BORDER|WS_TABSTOP, 48, 144, 124, 11
+  CONTROL "", 160, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 173, 144, 40, 11
+  CONTROL "", 169, "Edit", WS_BORDER|WS_TABSTOP, 48, 156, 124, 11
+  CONTROL "", 170, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 173, 156, 40, 11
+  CONTROL "", 175, "Edit", WS_BORDER|WS_TABSTOP, 48, 168, 124, 11
+  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 173, 168, 40, 11
+  CONTROL "", 185, "Edit", WS_BORDER|WS_TABSTOP, 48, 180, 124, 11
+  CONTROL "", 190, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 173, 180, 40, 11
+  CONTROL "", 205, "Edit", WS_BORDER|WS_TABSTOP, 48, 205, 124, 11
+  CONTROL "", 200, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 173, 205, 40, 11
+  CONTROL "", 300, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 127, 218, 86, 11
+  CONTROL "%", -1, "Static", WS_GROUP, 214, 171, 8, 8
+  CONTROL "%", -1, "Static", WS_GROUP, 214, 183, 8, 8
+  CONTROL "%", -1, "Static", WS_GROUP, 214, 207, 8, 8
+  CONTROL "%", -1, "Static", WS_GROUP, 214, 146, 8, 8
+  CONTROL "Régimen de impuestos", -1, "Button", BS_GROUPBOX, 43, 29, 448, 101
+  CONTROL "Descuentos", -1, "Button", BS_GROUPBOX, 43, 133, 448, 61
+  CONTROL "%", -1, "Static", WS_GROUP, 214, 158, 8, 8
+  CONTROL "Aplicado en", -1, "Static", WS_GROUP, 50, 222, 47, 10
+  CONTROL "Porcentaje I.R.P.F.", -1, "Static", WS_GROUP, 50, 119, 36, 8
+  CONTROL "%", -1, "Static", WS_GROUP, 142, 119, 9, 8
+  CONTROL "Tipo I.R.P.F.", -1, "Static", WS_GROUP, 50, 104, 45, 8
+  CONTROL "Descuentos atipicos", -1, "Button", BS_GROUPBOX, 43, 195, 448, 39
+  CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
+  CONTROL "Datos de impuestos y descuentos", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 446, 8
 }
 
