Filtros en informes pedidos y codigos postales

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -20766,3 +20766,34 @@ FONT 8, "MS Sans Serif"
   CONTROL "Datos de impuestos y descuentos", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 446, 8
 }
 
+LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
+
+Provincia DIALOG DISCARDABLE 30, 73, 259, 53
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
+CAPTION "Provincia"
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 42, 4, 33, 11
+  CONTROL "", 110, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 42, 17, 213, 11
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 154, 34, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 206, 34, 50, 14
+  CONTROL "Código", -1, "Static", WS_GROUP, 4, 7, 27, 8
+  CONTROL "Provincia", -1, "Static", WS_GROUP, 4, 20, 35, 8
+}
+
+CodigoPostal DIALOG DISCARDABLE 30, 73, 259, 65
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
+CAPTION "Población"
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 42, 4, 34, 11
+  CONTROL "", 110, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 42, 17, 213, 11
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 154, 46, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 206, 46, 50, 14
+  CONTROL "Código", -1, "Static", WS_GROUP, 4, 7, 27, 8
+  CONTROL "Población", -1, "Static", WS_GROUP, 4, 20, 35, 8
+  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 42, 30, 34, 11
+  CONTROL "", 121, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 78, 30, 177, 11
+  CONTROL "Provincia", -1, "Static", WS_GROUP, 3, 33, 35, 8
+}
+
