--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -967,9 +967,9 @@ FONT 8, "MS Sans Serif"
   CONTROL "Convertir unidades", 280, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 245, 73, 10
   CONTROL "Aplicar factor de conversión", 200, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 258, 101, 10
   CONTROL "", 210, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 98, 270, 56, 11
-  CONTROL "", 260, "Edit", WS_BORDER|WS_TABSTOP, 282, 245, 95, 11
-  CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 282, 258, 95, 11
-  CONTROL "", 291, "Edit", WS_BORDER|WS_TABSTOP, 282, 270, 95, 11
+  CONTROL "", 260, "Edit", WS_BORDER|WS_TABSTOP, 291, 245, 86, 11
+  CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 291, 258, 86, 11
+  CONTROL "", 291, "Edit", WS_BORDER|WS_TABSTOP, 291, 270, 86, 11
   CONTROL "Código", -1, "Static", WS_GROUP, 49, 42, 33, 8
   CONTROL "Descripción", -1, "Static", WS_GROUP, 49, 54, 39, 8
   CONTROL "Familia", -1, "Static", WS_GROUP, 49, 79, 33, 8
@@ -979,11 +979,6 @@ FONT 8, "MS Sans Serif"
   CONTROL "Temporada", 800, "Static", WS_GROUP, 49, 115, 47, 8
   CONTROL "", 500, "TBitMap", 0x0000020e, 4, 3, 34, 30, 0x00000020
   CONTROL "Datos generales del artículo", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 446, 8
-<<<<<<< HEAD
-=======
-  CONTROL "Ref. auxiliar", -1, "Static", WS_GROUP, 216, 261, 62, 8
-  CONTROL "Ref. auxiliar 2", -1, "Static", WS_GROUP, 216, 273, 62, 8
->>>>>>> 371df35aab8857f85cedf751bf1568643da3f0a0
   CONTROL "Lote actual", -1, "Static", WS_GROUP, 49, 193, 41, 8
   CONTROL "Lote", -1, "Button", BS_GROUPBOX, 44, 167, 164, 37
   CONTROL "Numero de serie", -1, "Button", BS_GROUPBOX, 210, 167, 170, 37
@@ -1001,11 +996,9 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 330, "TXBrowse", 0x00200000, 388, 91, 98, 188
   CONTROL "Código normalizado", -1, "Static", WS_GROUP, 216, 248, 62, 8
   CONTROL "Matriz", -1, "Static", WS_GROUP, 388, 42, 24, 8
-<<<<<<< HEAD
   CONTROL "Relación de codigos barras", -1, "Button", BS_GROUPBOX, 382, 67, 108, 216
-=======
-  CONTROL "Relación de codigos barras", -1, "Button", BS_GROUPBOX, 382, 67, 108, 217
->>>>>>> 371df35aab8857f85cedf751bf1568643da3f0a0
+  CONTROL "Ref. auxiliar", -1, "Static", WS_GROUP, 216, 261, 62, 8
+  CONTROL "Referencia segundaria", -1, "Static", WS_GROUP, 216, 273, 75, 8
 }
 
 ART_10 DIALOG DISCARDABLE 32, 6, 496, 286
